AMQP-303 - Improve Rules Compliance (Sonar)